--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.13",
+    "dotenv": "^16.0.3",
     "next": "13.0.0",
+    "next-themes": "^0.2.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-lottie-player": "^1.5.0"
   },
   "devDependencies": {
     "eslint": "8.22.0",
