--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@notionhq/client": "^2.2.3",
     "autoprefixer": "^10.4.13",
     "dotenv": "^16.0.3",
     "next": "13.0.0",
